Rendered preview causes crash when deleting a material node in shader node editor #37192

Closed
opened 2013-10-23 17:00:45 +02:00 by Shinsuke Irie · 5 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.10 amd64 + GeForce GTX 670

- Blender version with error, and version that worked ---

r60907

- Short description of error ---

If Blender window has rendered preview, deleting a material node in shader node editor leads to crash.
The crash always happens if using newly created material.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Steps to reproduce:

  1. Start Blender
  2. Unlink "Material" from the default cube
  3. Add new material "Material.001" to the default cube, and enable shader nodes
  4. Split 3D viewport into two areas, and change one of them to shader node editor
  5. In the 3D viewport, set view mode = "Rendered"
  6. In the node editor, delete a node "Material.001"

Blender crashes immediately after the step 6.

Attached a backtrace (blender_rendered_view_delete_material_node_crash.txt).
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.10 amd64 + GeForce GTX 670 - Blender version with error, and version that worked --- r60907 - Short description of error --- If Blender window has rendered preview, deleting a material node in shader node editor leads to crash. The crash always happens if using newly created material. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Steps to reproduce: 1. Start Blender 2. Unlink "Material" from the default cube 3. Add new material "Material.001" to the default cube, and enable shader nodes 4. Split 3D viewport into two areas, and change one of them to shader node editor 5. In the 3D viewport, set view mode = "Rendered" 6. In the node editor, delete a node "Material.001" Blender crashes immediately after the step 6. Attached a backtrace (blender_rendered_view_delete_material_node_crash.txt). %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%same crash happens here
debian wheezy 7.2, Gnome 3.4.2, Linux version 3.2.0-4-amd64, NVIDIA GTX 560 (Driver Version 319.60)%%%

%%%same crash happens here debian wheezy 7.2, Gnome 3.4.2, Linux version 3.2.0-4-amd64, NVIDIA GTX 560 (Driver Version 319.60)%%%

%%%Lukas, i guess you would love to look into shader nodes :) If not, feel free to re-assign to me ;)%%%

%%%Lukas, i guess you would love to look into shader nodes :) If not, feel free to re-assign to me ;)%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37192
No description provided.